# Copyright (C) Univ. Paris-SUD, Johan Oudinet <oudinet@lri.fr> - 2010
#  
# This file is part of Rukia.
#  
# Rukia is free software: you can redistribute it and/or modify it
# under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#  
# Rukia is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#  
# You should have received a copy of the GNU Lesser General Public
# License along with Rukia.  If not, see <http://www.gnu.org/licenses/>.
#  
nobase_include_HEADERS =			\
rukia/automaton.hh				\
rukia/count.hh					\
rukia/ctable.hh					\
rukia/draw.hh					\
rukia/draw.hxx					\
rukia/dtable.hh					\
rukia/get_mem_usage.hh				\
rukia/path.hh					\
rukia/path.hxx					\
rukia/random.hh					\
rukia/io/dot/load.hh